Fix top bar as fixed header, prevent scroll whitespace

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0;
     padding: 0;
+    padding-top: 64px;
     font-size: 16px;
     font-family: Inter, sans-serif;
     background-color: rgb(246 246 246 / 59%);
@@ -38,6 +39,10 @@ div[for="top-bar"] {
     background-color: #1f262d;
     height: 64px;
     width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 50;
     color: #fff;
     text-align: center;
     padding: 0 14px;
